fixed page jump if scrollbar appears

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,10 +1,21 @@
 html {
   position: relative;
-  min-height: 100%
+  min-height: 100%;
+  margin-left: calc(100vw - 100%);
+  margin-right: 0;
 }
 
 body {
   margin-bottom: 50px;
+}
+
+.navbar{
+  margin-left: calc(100vw - 100.7%);
+  margin-right: 0;
+}
+
+.navbar-header{
+    padding-left: 0.7%
 }
 
 .main {
